# emgchachito

./: .gitignore  emg_ui_demo.py  pyproject.toml  simudata.ipynb  test.ipynb  test.py
DeviceInterface/: EMG_HOST_FRAME_PROTOCOL.md  __init__.py  ads1299_protocol.py  w2_protocol.py
analysis/: README.md  __init__.py  inspect_capture.py
device_host_demo/: main.py
fundamental/: README.md  __init__.py  acquisition.py  acquisition_architecture.dot  acquisition_window.py  app_shell.py  capture_store.py  commands.py  csv_writer.py  main.py  messages.py  plot_processing.py  plot_window.py  recording_session.py  serial_config.py  signal_buffer.py  source_config.py  stimulus_model.py  stimulus_window.py  streams.py  window_manager.py
fundamental/sources/: __init__.py  base.py  ble_w2.py  myo.py  serial_ads1299.py
tests/: __init__.py  test_acquisition_sources.py  test_ads1299_protocol.py  test_app_commands.py  test_ble_w2_source.py  test_capture_store.py  test_myo_source.py  test_plot_processing.py  test_recording_session.py
