[project]
name = "chachito"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bleak>=3.0.2",
    "dearpygui>=2.3.1",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymyo==2.2.3",
    "pyserial>=3.5",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "python-dateutil>=2.9.0.post0",
]
